[gd_scene load_steps=3 format=3 uid="uid://cxy0ubf610arb"]

[ext_resource type="Script" path="res://scripts/noise_source.gd" id="1_3vekf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p8jra"]

[node name="noise_source" type="Node2D"]
script = ExtResource("1_3vekf")

[node name="noise_area" type="Area2D" parent="."]

[node name="noise_circle" type="CollisionShape2D" parent="noise_area"]
shape = SubResource("CircleShape2D_p8jra")

[node name="timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="noise_area" to="." method="_on_noise_area_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
